# oxygen-os

./: Cargo.toml  Makefile  build.rs  flake.nix  result  rust-toolchain.toml
crates/oxyboot/: Cargo.toml
crates/oxyboot/src/: image.rs  main.rs
crates/oxykernel/: Cargo.toml
crates/oxykernel/linkers/: x86_64.ld
crates/oxykernel/src/: main.rs
crates/oxykernel/targets/: x86_64-oxygen-kernel.json
nix/ovmf-bin/: default.nix
os/: Cargo.toml
os/.cargo/: config.toml
os/oxy-kernel/: Cargo.toml
os/oxy-kernel/src/: kernel.rs  main.rs
os/oxy-kernel/src/arch/x86_64/: acpi.rs  entry.rs  gdt.rs  interrupts.rs  mod.rs
os/oxy-kernel/src/arch/x86_64/early/: logger.rs  mod.rs
os/oxy-kernel/src/arch/x86_64/memory/: mod.rs  vmm.rs
os/oxy-kernel/src/early/: logger.rs  mod.rs  vga.rs
os/oxy-kernel/src/memory/: address.rs  allocator.rs  error.rs  kmm.rs  mod.rs  page.rs  vmm.rs
src/: main.rs
tools/build-image/: Cargo.toml
tools/build-image/src/: main.rs
