cargo-features = ["profile-rustflags"]

[package]
name = "oxygen-os"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[workspace]
resolver = "2"
members = [
    "os/*",
]

[workspace.dependencies]
log = "0.4.20"
thiserror = { package = "thiserror-core", version = "1.0.50", default-features = false }

[build-dependencies]
oxy-kernel = { path = "os/oxy-kernel", artifact = "bin", target = "x86_64-unknown-none" }
bootloader = "0.11.7"

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"
clap_derive = "4.5.8"
clap = { version = "4.5.8", features = ["derive"] }

[profile.release.package.oxy-kernel]
rustflags = [
    "-C",
    "link-args=--image-base 0xFFFF800000000000",
    "-C",
    "relocation-model=static",
    "-C",
    "code-model=large",
]
[profile.dev.package.oxy-kernel]
rustflags = [
    "-C",
    "link-args=--image-base 0xFFFF800000000000",
    "-C",
    "relocation-model=static",
    "-C",
    "code-model=large",
]
